@@ -7,6 +7,7 @@
  * fix nomalmap scaling
  * move font setup to loading screen
  * fix for unreadable font texture
+ * use .pngmap extension for font maps to avoid unity autoloading texture
 
 0.5.0
  * fix treatment of normal maps from mbm files
